--- a/.github/workflows/ci-2021-0-x.yml
+++ b/.github/workflows/ci-2021-0-x.yml
@@ -11,8 +11,8 @@ jobs:
   build:
     uses: ./.github/workflows/common.yml
     secrets:
-      DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
-      DOCKER_HUB_PASSWORD: ${{ secrets.DOCKER_HUB_PASSWORD }}
+      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+      DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
       TMC_API_TOKEN: ${{ secrets.TMC_API_TOKEN }}
       GCP_CRED_JSON: ${{ secrets.GCP_CRED_JSON }}
       ARTIFACTORY_USERNAME: ${{ secrets.ARTIFACTORY_USERNAME }}
