--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -293,6 +293,17 @@ jobs:
         uses: ./.github/actions/install-xsltproc
       - name: 'Configure: Install Pack'
         uses: ./.github/actions/install-pack
+      - name: 'Configure: Check Docker Credentials'
+        shell: bash
+        run: |
+          if [ "${{ secrets.DOCKERHUB_USERNAME }}" = "" ]; then
+            echo "Expected DOCKERHUB_USERNAME"
+            exit 2
+          fi
+          if [ "${{ secrets.DOCKERHUB_TOKEN }}" = "" ]; then
+            echo "Expected DOCKERHUB_TOKEN"
+            exit 2
+          fi
       - name: 'Configure: Docker login'
         uses: docker/login-action@v2
         with:
