--- a/stream-applications-release-train/pom.xml
+++ b/stream-applications-release-train/pom.xml
@@ -82,8 +82,7 @@
         <pluginRepository>
             <id>spring-milestones</id>
             <name>Spring Milestones</name>
-            <url>https://repo.spring.io/plugins-milestone</url>
+            <url>https://repo.spring.io/milestone</url>
         </pluginRepository>
     </pluginRepositories>
-
 </project>
