--- a/applications/sink/redis-sink/pom.xml
+++ b/applications/sink/redis-sink/pom.xml
@@ -28,7 +28,7 @@
 		<dependency>
 			<groupId>org.springframework.cloud.fn</groupId>
 			<artifactId>redis-common</artifactId>
-			<version>4.0.0-SNAPSHOT</version>
+            <version>${project.version}</version>
 			<type>test-jar</type>
 			<scope>test</scope>
 		</dependency>
