--- a/functions/consumer/mongodb-consumer/pom.xml
+++ b/functions/consumer/mongodb-consumer/pom.xml
@@ -31,7 +31,7 @@
 		<dependency>
 			<groupId>org.springframework.cloud.fn</groupId>
 			<artifactId>mongodb-common</artifactId>
-			<version>4.0.0-SNAPSHOT</version>
+			<version>${project.version}</version>
 			<type>test-jar</type>
 			<scope>test</scope>
 		</dependency>
