--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -556,7 +556,7 @@ jobs:
           pushd stream-applications > /dev/null
             echo "::notice ::building - stream-applications-release-train"
             set -e
-            $ROOT_DIR/build-folder.sh stream-applications-release-train "install verify deploy"
+            $ROOT_DIR/build-folder.sh stream-applications-release-train "install deploy"
             set +e
             echo "::notice ::stream-applications-release-train build completed"
           popd > /dev/null
