--- a/stream-applications-release-train/stream-applications-docs/pom.xml
+++ b/stream-applications-release-train/stream-applications-docs/pom.xml
@@ -22,13 +22,6 @@
         </repository>
     </repositories>
     <dependencies>
-        <dependency>
-            <groupId>io.spring.docresources</groupId>
-            <artifactId>spring-doc-resources</artifactId>
-            <version>${docs.resources.version}</version>
-            <type>zip</type>
-            <optional>true</optional>
-        </dependency>
         <!-- Any modules whose javadocs need to be published must be listed here.
         Modules with @ConfigurationProperties.
         -->
@@ -359,6 +352,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
+                        <version>${maven-javadoc-plugin.version}</version>
                         <executions>
                             <execution>
                                 <id>attach-javadocs</id>
@@ -369,11 +363,12 @@
                                 <configuration>
                                     <includeDependencySources>true</includeDependencySources>
                                     <dependencySourceIncludes>
-                                        <dependencySourceInclude>org.springframework.cloud.fn:*
-                                        </dependencySourceInclude>
+                                        <dependencySourceInclude>org.springframework.cloud.stream.app:*</dependencySourceInclude>
+                                        <dependencySourceInclude>org.springframework.cloud.fn:*</dependencySourceInclude>
                                     </dependencySourceIncludes>
                                     <attach>false</attach>
                                     <quiet>true</quiet>
+                                    <doclint>none</doclint>
                                     <stylesheetfile>${basedir}/src/main/javadoc/spring-javadoc.css</stylesheetfile>
                                     <links>
                                         <link>
@@ -389,6 +384,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-dependency-plugin</artifactId>
+                        <version>3.3.0</version>
                         <executions>
                             <execution>
                                 <id>unpack-doc-resources</id>
@@ -405,6 +401,16 @@
                                 </configuration>
                             </execution>
                         </executions>
+                        <dependencies>
+                            <dependency>
+                                <groupId>io.spring.docresources</groupId>
+                                <artifactId>spring-doc-resources</artifactId>
+                                <version>${docs.resources.version}</version>
+                                <type>zip</type>
+                                <scope>system</scope>
+                                <systemPath>${project.basedir}/libs/spring-doc-resources-0.2.5.zip</systemPath>
+                            </dependency>
+                        </dependencies>
                     </plugin>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
@@ -432,12 +438,12 @@
                     <plugin>
                         <groupId>org.asciidoctor</groupId>
                         <artifactId>asciidoctor-maven-plugin</artifactId>
-                        <version>2.1.0</version>
+                        <version>2.2.2</version>
                         <dependencies>
                             <dependency>
                                 <groupId>org.asciidoctor</groupId>
                                 <artifactId>asciidoctorj-pdf</artifactId>
-                                <version>1.5.3</version>
+                                <version>2.3.4</version>
                             </dependency>
                         </dependencies>
                         <executions>
