Use default container selected by ARC

--- a/scripts/k8s/runners-stream-ci-auto-template.yaml
+++ b/scripts/k8s/runners-stream-ci-auto-template.yaml
@@ -6,7 +6,7 @@ spec:
   template:
     spec:
       repository: spring-cloud/stream-applications
-      image: 'summerwind/actions-runner-dind:tag-placeholder'
+#      image: 'summerwind/actions-runner-dind:tag-placeholder'
       priorityClassName: high-priority
       dockerdWithinRunnerContainer: true
       imagePullPolicy: IfNotPresent
