--- a/scripts/k8s/runners-stream-ci-manual.yaml
+++ b/scripts/k8s/runners-stream-ci-manual.yaml
@@ -20,5 +20,8 @@ spec:
         requests:
           cpu: "1500m"
           memory: "1536Mi"
+      env:
+        - name: STARTUP_DELAY_IN_SECONDS
+          value: "10"
       labels:
         - stream-ci
