--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -159,7 +159,8 @@ jobs:
           GH_ARC_PRIVATE_KEY: ${{ secrets.GH_ARC_PRIVATE_KEY }}
           GH_ARC_PAT: ${{ secrets.GH_ARC_PAT }}
   core:
-    runs-on: 'stream-ci-large'
+#    runs-on: 'stream-ci-large'
+    runs-on: ubuntu-latest
     needs:
       - parameters
     steps:
@@ -253,7 +254,8 @@ jobs:
       fail-fast: false
       matrix:
         app: ${{ fromJson(needs.parameters.outputs.processors) }}
-    runs-on: 'stream-ci'
+#    runs-on: 'stream-ci'
+    runs-on: ubuntu-latest
     steps:
       - name: 'Configure: checkout stream-applications'
         uses: actions/checkout@v3
@@ -345,7 +347,8 @@ jobs:
       fail-fast: false
       matrix:
         app: ${{ fromJson(needs.parameters.outputs.sinks) }}
-    runs-on: 'stream-ci'
+#    runs-on: 'stream-ci'
+    runs-on: ubuntu-latest
     steps:
       - name: 'Configure: checkout stream-applications'
         uses: actions/checkout@v3
@@ -417,8 +420,9 @@ jobs:
         run: ./publish-app.sh "stream-applications" "applications/sink/${{ matrix.app }}"
   sources:
     if: ${{ needs.parameters.outputs.sources != '' && needs.parameters.outputs.sources != null }}
-    runs-on: ${{ matrix.app == 'cdc-debezium-source' && 'stream-ci-large' || 'stream-ci' }}
+#    runs-on: ${{ matrix.app == 'cdc-debezium-source' && 'stream-ci-large' || 'stream-ci' }}
     #    runs-on: 'stream-ci'
+    runs-on: ubuntu-latest
     needs:
       - core
       - parameters
@@ -505,7 +509,8 @@ jobs:
       - processors
       - parameters
       - scale-runners-up
-    runs-on: 'stream-ci'
+#    runs-on: 'stream-ci'
+    runs-on: ubuntu-latest
     steps:
       - name: 'Configure: checkout stream-applications'
         uses: actions/checkout@v3
