--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -159,8 +159,8 @@ jobs:
 #          GH_ARC_PRIVATE_KEY: ${{ secrets.GH_ARC_PRIVATE_KEY }}
 #          GH_ARC_PAT: ${{ secrets.GH_ARC_PAT }}
   core:
-#    runs-on: 'stream-ci-large'
-    runs-on: ubuntu-latest
+    runs-on: 'stream-ci-large'
+#    runs-on: ubuntu-latest
     needs:
       - parameters
     steps:
