--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -21,4 +21,4 @@ jobs:
     with:
       branch: 'main'
       verbose: ${{ inputs.verbose == 'true' }}
-      useMavenThreads: true
+      useMavenThreads: false
