--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -161,7 +161,7 @@ jobs:
 #          GH_ARC_PAT: ${{ secrets.GH_ARC_PAT }}
   core:
 #    runs-on: 'stream-ci-large'
-    runs-on: ubuntu-latest-4-cores
+    runs-on: ubuntu-20.04
     needs:
       - parameters
     steps:
