--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -73,6 +73,10 @@ jobs:
             MVN_THR=
           fi
           MAVEN_OPTS="-s $BUILD_DIR/.settings.xml -B $MVN_THR"
+          echo "VERBOSE=$VERBOSE"
+          if [ "$VERBOSE" = "true" ]; then
+            MAVEN_OPTS="-X $MAVEN_OPTS"
+          fi
           for module in $MODULES; do
             if [[ "$module" == *"/"* ]]; then            
               if [ "$FOLDERS" = "" ]; then
@@ -100,7 +104,7 @@ jobs:
           fi
           if [ "$FOLDERS" != "" ]; then
             echo "::info ::verify $FOLDERS and dependents"
-            ./mvnw $MAVEN_OPTS -pl $FOLDERS install -amd
+            ./mvnw $MAVEN_OPTS -amd -pl $FOLDERS install
             RC=$?
             if ((RC!=0)); then
               exit $RC
