--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -11,7 +11,7 @@ on:
       verbose:
         type: boolean
         required: false
-        default: true
+        default: false
         description: 'Verbose output'
       useMavenThreads:
         type: boolean
