--- a/applications/sink/elasticsearch-sink/src/main/resources/META-INF/dataflow-configuration-metadata.properties
+++ b/applications/sink/elasticsearch-sink/src/main/resources/META-INF/dataflow-configuration-metadata.properties
@@ -1,2 +1,2 @@
 configuration-properties.classes=org.springframework.cloud.fn.consumer.elasticsearch.ElasticsearchConsumerProperties, \
-  org.springframework.boot.autoconfigure.elasticsearch.ElasticsearchRestClientProperties
+  org.springframework.boot.autoconfigure.elasticsearch.ElasticsearchProperties
