Added xmpp source and sink.

--- a/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-docker.properties
+++ b/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-docker.properties
@@ -18,6 +18,7 @@ source.twitter-message=docker:springcloudstream/twitter-message-source-kafka:@ap
 source.twitter-search=docker:springcloudstream/twitter-search-source-kafka:@apps.docker.tag@
 source.twitter-stream=docker:springcloudstream/twitter-stream-source-kafka:@apps.docker.tag@
 source.websocket=docker:springcloudstream/websocket-source-kafka:@apps.docker.tag@
+source.xmpp=docker:springcloudstream/xmpp-source-kafka:@apps.docker.tag@
 source.zeromq=docker:springcloudstream/zeromq-source-kafka:@apps.docker.tag@
 sink.cassandra=docker:springcloudstream/cassandra-sink-kafka:@apps.docker.tag@
 sink.analytics=docker:springcloudstream/analytics-sink-kafka:@apps.docker.tag@
@@ -41,6 +42,7 @@ sink.throughput=docker:springcloudstream/throughput-sink-kafka:@apps.docker.tag@
 sink.twitter-message=docker:springcloudstream/twitter-message-sink-kafka:@apps.docker.tag@
 sink.twitter-update=docker:springcloudstream/twitter-update-sink-kafka:@apps.docker.tag@
 sink.websocket=docker:springcloudstream/websocket-sink-kafka:@apps.docker.tag@
+sink.xmpp=docker:springcloudstream/xmpp-sink-kafka:@apps.docker.tag@
 sink.zeromq=docker:springcloudstream/zeromq-sink-kafka:@apps.docker.tag@
 processor.aggregator=docker:springcloudstream/aggregator-processor-kafka:@apps.docker.tag@
 processor.bridge=docker:springcloudstream/bridge-processor-kafka:@apps.docker.tag@
