--- a/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-maven-repo-url.properties
+++ b/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-maven-repo-url.properties
@@ -38,6 +38,8 @@ source.twitter-stream=https://@repo-spring-io@/org/springframework/cloud/stream/
 source.twitter-stream.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/twitter-stream-source-kafka/@apps.version@/twitter-stream-source-kafka-@apps.version@-metadata.jar
 source.websocket=https://@repo-spring-io@/org/springframework/cloud/stream/app/websocket-source-kafka/@apps.version@/websocket-source-kafka-@apps.version@.jar
 source.websocket.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/websocket-source-kafka/@apps.version@/websocket-source-kafka-@apps.version@-metadata.jar
+source.xmpp=https://@repo-spring-io@/org/springframework/cloud/stream/app/xmpp-source-kafka/@apps.version@/zeromq-source-kafka-@apps.version@.jar
+source.xmpp.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/xmpp-source-kafka/@apps.version@/zeromq-source-kafka-@apps.version@-metadata.jar
 source.zeromq=https://@repo-spring-io@/org/springframework/cloud/stream/app/zeromq-source-kafka/@apps.version@/zeromq-source-kafka-@apps.version@.jar
 source.zeromq.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/zeromq-source-kafka/@apps.version@/zeromq-source-kafka-@apps.version@-metadata.jar
 sink.cassandra=https://@repo-spring-io@/org/springframework/cloud/stream/app/cassandra-sink-kafka/@apps.version@/cassandra-sink-kafka-@apps.version@.jar
@@ -84,6 +86,8 @@ sink.twitter-update=https://@repo-spring-io@/org/springframework/cloud/stream/ap
 sink.twitter-update.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/twitter-update-sink-kafka/@apps.version@/twitter-update-sink-kafka-@apps.version@-metadata.jar
 sink.websocket=https://@repo-spring-io@/org/springframework/cloud/stream/app/websocket-sink-kafka/@apps.version@/websocket-sink-kafka-@apps.version@.jar
 sink.websocket.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/websocket-sink-kafka/@apps.version@/websocket-sink-kafka-@apps.version@-metadata.jar
+sink.xmpp=https://@repo-spring-io@/org/springframework/cloud/stream/app/xmpp-sink-kafka/@apps.version@/zeromq-sink-kafka-@apps.version@.jar
+sink.xmpp.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/xmpp-sink-kafka/@apps.version@/zeromq-sink-kafka-@apps.version@-metadata.jar
 sink.zeromq=https://@repo-spring-io@/org/springframework/cloud/stream/app/zeromq-sink-kafka/@apps.version@/zeromq-sink-kafka-@apps.version@.jar
 sink.zeromq.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/zeromq-sink-kafka/@apps.version@/zeromq-sink-kafka-@apps.version@-metadata.jar
 processor.aggregator=https://@repo-spring-io@/org/springframework/cloud/stream/app/aggregator-processor-kafka/@apps.version@/aggregator-processor-kafka-@apps.version@.jar
