--- a/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-maven.properties
+++ b/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-maven.properties
@@ -38,6 +38,8 @@ source.twitter-stream=maven://org.springframework.cloud.stream.app:twitter-strea
 source.twitter-stream.metadata=maven://org.springframework.cloud.stream.app:twitter-stream-source-rabbit:jar:metadata:@apps.version@
 source.websocket=maven://org.springframework.cloud.stream.app:websocket-source-rabbit:@apps.version@
 source.websocket.metadata=maven://org.springframework.cloud.stream.app:websocket-source-rabbit:jar:metadata:@apps.version@
+source.xmpp=maven://org.springframework.cloud.stream.app:xmpp-source-rabbit:@apps.version@
+source.xmpp.metadata=maven://org.springframework.cloud.stream.app:xmpp-source-rabbit:jar:metadata:@apps.version@
 source.zeromq=maven://org.springframework.cloud.stream.app:zeromq-source-rabbit:@apps.version@
 source.zeromq.metadata=maven://org.springframework.cloud.stream.app:zeromq-source-rabbit:jar:metadata:@apps.version@
 sink.cassandra=maven://org.springframework.cloud.stream.app:cassandra-sink-rabbit:@apps.version@
@@ -84,6 +86,8 @@ sink.twitter-update=maven://org.springframework.cloud.stream.app:twitter-update-
 sink.twitter-update.metadata=maven://org.springframework.cloud.stream.app:twitter-update-sink-rabbit:jar:metadata:@apps.version@
 sink.websocket=maven://org.springframework.cloud.stream.app:websocket-sink-rabbit:@apps.version@
 sink.websocket.metadata=maven://org.springframework.cloud.stream.app:websocket-sink-rabbit:jar:metadata:@apps.version@
+sink.xmpp=maven://org.springframework.cloud.stream.app:xmpp-sink-rabbit:@apps.version@
+sink.xmpp.metadata=maven://org.springframework.cloud.stream.app:xmpp-sink-rabbit:jar:metadata:@apps.version@
 sink.zeromq=maven://org.springframework.cloud.stream.app:zeromq-sink-rabbit:@apps.version@
 sink.zeromq.metadata=maven://org.springframework.cloud.stream.app:zeromq-sink-rabbit:jar:metadata:@apps.version@
 processor.aggregator=maven://org.springframework.cloud.stream.app:aggregator-processor-rabbit:@apps.version@
