Added build on push Added bootVersion to descriptors.

--- a/.github/workflows/ci-2021-0-x.yml
+++ b/.github/workflows/ci-2021-0-x.yml
@@ -7,6 +7,11 @@ on:
         required: false
         default: 'false'
         description: 'Produces verbose output'
+  push:
+    paths-ignore:
+      - '.github/**'
+    branches:
+      - '2021.0.x'
 jobs:
   build:
     uses: ./.github/workflows/common.yml
